<resources>
    <string name="app_name">NativeOpenCV</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">模糊</string>
    <string name="menu_gallery">Canny边缘检测</string>
    <string name="menu_slideshow">腐蚀</string>
    <string name="menu_camshift">彩色目标跟踪</string>
    <string name="menu_mat">MAT</string>
    <string name="menu_contrast">Contrast</string>


    <string name="menu_opengl_fbo">FBO</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_texture_map">texture map</string>
    <string name="menu_opengl_offscreen_rendering">OffScreen Rendering</string>
    <string name="menu_triangle">Triangle</string>
    <string name="menu_opengl_yuv_rendering">YUV Rendering</string>
    <string name="menu_opengl_vao_vbo"><![CDATA[VAO&VBO]]></string>
    <string name="menu_opengl_transform_feedback">Transform Feedback</string>
    <string name="menu_opengl_coord_system">Coord System</string>
    <string name="menu_jetpack_compose">JetpackCompse</string>
</resources>