<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_camshift"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_camshift" />
        <item
            android:id="@+id/nav_mat"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_mat" />
        <item
            android:id="@+id/nav_contrast"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_contrast" />
    </group>
</menu>