<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.huahuico.mynatiaveapplication.ui.blur.BlurFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_src_dst" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.huahuico.mynatiaveapplication.ui.canny.CannyFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_src_dst" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.huahuico.mynatiaveapplication.ui.erod.ErodeFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_src_dst" />
    <fragment
        android:id="@+id/nav_camshift"
        android:name="com.huahuico.mynatiaveapplication.ui.camshift.CamShiftFragment"
        android:label="@string/menu_camshift"
        tools:layout="@layout/fragment_src_dst" />
    <fragment
        android:id="@+id/nav_mat"
        android:name="com.huahuico.mynatiaveapplication.ui.mat.MatFragment"
        android:label="@string/menu_mat"
        tools:layout="@layout/fragment_src_dst" />
    <fragment
        android:id="@+id/nav_contrast"
        android:name="com.huahuico.mynatiaveapplication.ui.contrast.ContrastFragment"
        android:label="@string/menu_contrast"
        tools:layout="@layout/fragment_src_dst" />
    <fragment
        android:id="@+id/nav_texture_map"
        android:name="com.huahuico.mynatiaveapplication.opengl.ui.TextureMapFragment"
        android:label="@string/menu_texture_map"
        tools:layout="@layout/fragment_image" />
    <fragment
        android:id="@+id/nav_opengl_fbo"
        android:name="com.huahuico.mynatiaveapplication.opengl.ui.FBOFragment"
        android:label="@string/menu_opengl_fbo"
        tools:layout="@layout/fragment_image" />
</navigation>